--- a/Maquetado absoluto/css/estilos.css
+++ b/Maquetado absoluto/css/estilos.css
@@ -17,5 +17,5 @@ h3{color: rgb(119, 0, 0);}
 .der span{font-style: italic;}
 .mod_der{width: 90%;background-color: chartreuse; border-radius: 7px; margin-bottom: 20px; margin-top: 5px;}
 
-footer{height: 20px; background-color: coral; text-align: center; clear: both; }
-a{text-align: center; margin: auto;}
+.contenedor footer{height: 20px; background-color: coral; text-align: center; clear: both; }
+footer{text-align: center;}
