Nuevo diseño añadido 100%

--- a/maquetar I/estilos.css
+++ b/maquetar I/estilos.css
@@ -124,3 +124,8 @@ img#img3{
     border-top: black 10px solid;
     border-bottom: black 10px solid;
 }
+
+#volver{
+    text-align: center;
+    
+}
